--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,9 @@ code {
         bottom: -128px !important;
     }
 }
+
+@media screen and (min-width: 640px) and (max-width: 832px) and (max-height: 460px) and (orientation: landscape) {
+    #wrapper {
+        height: calc(var(--vh, 1vh) * 98) !important;
+    }
+}
